PES-514: Organisert samordning og Tjenestepensjon under eget punkt. Endring i overskrift for Tjenestepensjon
Co-authored-by: Mathias Sand Jahren <the.mather1@gmail.com>

--- a/docs/api/tjenestepensjon/tpregisteret-api.yaml
+++ b/docs/api/tjenestepensjon/tpregisteret-api.yaml
@@ -3,7 +3,7 @@ info:
   title: Pensjon TP-registeret, forhold mellom person og ordning, og Innsyn.
   description: |-
     API for å behandle forhold mellom person og ordning for eksterne samhandlere,
-    og innsyn i NAV-registrerte tjenestepensjonsforhold og ytelser.
+    og innsyn i registrerte tjenestepensjonsforhold og ytelser.
 
     Påkrevd scope-verdi: `nav:pensjon/v1/tpregisteret`
   contact: {}
