--- a/docs/api/alderspensjon/simulering/apidocSimulerAlderspensjon.yaml
+++ b/docs/api/alderspensjon/simulering/apidocSimulerAlderspensjon.yaml
@@ -5,9 +5,10 @@ info:
   description: For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til `nav:pensjon/v3/alderspensjon`. Dette er en simuleringstjeneste for tjenestepensjonsordninger i offentlig sektor, og benyttes for å kunne simulere alderspensjon fra folketrygden for brukere med TP-forhold.
   contact: {}
 servers:
-  - url: https://template.value/template/value
+  - url: https://pensjon-gw.ekstern.dev.nav.no
+  - url: https://pensjon-gw.nav.no
 paths:
-  /simuler:
+  /simuler/alderspensjon/v3:
     post:
       description: Simulering av alderspensjon
       tags:
