--- a/docs/api/samordning/hendelser-api.yaml
+++ b/docs/api/samordning/hendelser-api.yaml
@@ -13,7 +13,7 @@ servers:
 security:
   - Maskinporten: []
 paths:
-  /samordning/hendelser:
+  /hendelser:
     get:
       summary: Les samordningspliktige hendelser.
       description: "Endepunktet returnerer en feed som inneholder hendelser tilhørende et angitt tjenestepensjonsnummer.
