PES-514: Eksponere hendelse-api i Q1.
Co-authored-by: Jens Chr. Madsen <Jens.Christian.Madsen@nav.no>
Co-authored-by: Mathias Sand Jahren <the.mather1@gmail.com>

--- a/docs/api/samordning/hendelser-api.yaml
+++ b/docs/api/samordning/hendelser-api.yaml
@@ -9,6 +9,7 @@ info:
   version: '1.0'
 servers:
   - url: https://pensjon-gw.ekstern.dev.nav.no/samordning
+  - url: https://pensjon-q1-gw.ekstern.dev.nav.no/samordning
   - url: https://pensjon-gw.nav.no/samordning
 security:
   - Maskinporten: []
