Legger til URL for produksjon

--- a/docs/api/ufore/erungufor/erungufor-api.yaml
+++ b/docs/api/ufore/erungufor/erungufor-api.yaml
@@ -19,6 +19,7 @@ info:
   version: 1.0.0
 servers:
   - url: https://pensjon-gw.ekstern.dev.nav.no/uforetrygd
+  - url: https://pensjon-gw.nav.no/uforetrygd
 paths:
   /erungufor:
     post:
