--- a/docs/api/samordning/hendelser-api.yaml
+++ b/docs/api/samordning/hendelser-api.yaml
@@ -2,21 +2,20 @@ openapi: 3.0.1
 info:
   title: Pensjon Samordningspliktige hendelser.
   description: |-
-    Hendelseskø for samordningspliktige hendelser (AP, AFP, OMS).
+    Hendelseskø for samordningspliktige vedtak (AP, AFP, OMS), og .
 
     Påkrevd scope-verdi: `nav:pensjon/v1/samordning`
   contact: {}
   version: '1.0'
 servers:
   - url: https://pensjon-gw.ekstern.dev.nav.no/samordning
-  - url: https://pensjon-q1-gw.ekstern.dev.nav.no/samordning
   - url: https://pensjon-gw.nav.no/samordning
 security:
   - Maskinporten: []
 paths:
   /hendelser:
     get:
-      summary: Les samordningspliktige hendelser.
+      summary: Les samordningspliktige hendelser. ERSTATTET AV /hendelser/vedtak
       description: "Endepunktet returnerer en feed som inneholder hendelser tilhørende et angitt tjenestepensjonsnummer.
                     \n\nFeeden benytter paginering, som deler opp feeden i sider basert på angitt antall hendelser per side. Hver side inneholder en liste med _hendelser_, samt en _nextUrl_ som peker til neste side av feeden. Siste side er nådd når _nextUrl_ er _null_.
                     \n\nSekvensnummer kan benyttes som offset for feeden. Hendelser knyttet til et tjenestepensjonsnummer starter med sekvensnummer 1 til og med _sisteSekvensnummer_."
@@ -63,7 +62,187 @@ paths:
           content:
             application/json;charset=UTF-8:
               schema:
-                $ref: '#/components/schemas/feed'
+                title: Feed
+                type: object
+                properties:
+                  hendelser:
+                    type: array
+                    description: Liste av vedtakshendelser.
+                    items:
+                      $ref: '#/components/schemas/vedtakshendelse'
+                  sisteSekvensnummer:
+                    type: string
+                    description: Siste sekvensnummer fra forrige side
+                    format: long
+                  sisteLesteSekvensnummer:
+                    type: string
+                    description: Det nyeste sekvensnummeret
+                    format: long
+                  nextUrl:
+                    type: string
+                    description: Lenke til neste side
+        '401':
+          description: Ugyldig access token
+          content:
+            application/json;charset=UTF-8:
+              schema:
+                type: object
+        '500':
+          description: Internal Server Error
+          content:
+            application/json;charset=UTF-8:
+              schema:
+                type: object
+      deprecated: true
+  /hendelser/vedtak:
+    get:
+      summary: Les samordningspliktige hendelser.
+      description: "Endepunktet returnerer en feed som inneholder hendelser tilhørende et angitt tjenestepensjonsnummer.
+                    \n\nFeeden benytter paginering, som deler opp feeden i sider basert på angitt antall hendelser per side. Hver side inneholder en liste med _hendelser_, samt en _nextUrl_ som peker til neste side av feeden. Siste side er nådd når _nextUrl_ er _null_.
+                    \n\nSekvensnummer kan benyttes som offset for feeden. Hendelser knyttet til et tjenestepensjonsnummer starter med sekvensnummer 1 til og med _sisteSekvensnummer_."
+      operationId: HendelserVedtakGet
+      parameters:
+        - name: tpnr
+          in: query
+          description: Id for ordning som vedtaket tilhører
+          required: true
+          schema:
+            type: string
+        - name: side
+          in: query
+          description: Sidenummer for paginert søk.
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: antall
+          in: query
+          description: Antall hendelser per side.
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 10000
+        - name: sekvensnummer
+          in: query
+          description: Start innlesningen fra dette sekvensnummeret
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 1
+        - name: Authorization
+          in: header
+          description: 'Standard Authorization-header som inneholder et Base64-kodet Bearer-token (JWT-aksesstoken) utstedt av Maskinporten (Difi). Verdien må starte med "Bearer ", deretter følger tokenstrengen.'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json;charset=UTF-8:
+              schema:
+                title: Feed
+                type: object
+                properties:
+                  hendelser:
+                    type: array
+                    description: Liste av vedtakshendelser.
+                    items:
+                      $ref: '#/components/schemas/vedtakshendelse'
+                  sisteSekvensnummer:
+                    type: string
+                    description: Siste sekvensnummer fra forrige side
+                    format: long
+                  sisteLesteSekvensnummer:
+                    type: string
+                    description: Det nyeste sekvensnummeret
+                    format: long
+                  nextUrl:
+                    type: string
+                    description: Lenke til neste side
+        '401':
+          description: Ugyldig access token
+          content:
+            application/json;charset=UTF-8:
+              schema:
+                type: object
+        '500':
+          description: Internal Server Error
+          content:
+            application/json;charset=UTF-8:
+              schema:
+                type: object
+      deprecated: false
+  /hendelser/ytelser:
+    get:
+      summary: Les hendelser for tjenestepensjonordning.
+      description: "Endepunktet returnerer en feed som inneholder hendelser for ytelser.
+                    \n\nFeeden benytter paginering, som deler opp feeden i sider basert på angitt antall hendelser per side. Hver side inneholder en liste med hendelser_ for ytelser, samt en _nextUrl_ som peker til neste side av feeden. Siste side er nådd når _nextUrl_ er _null_.
+                    \n\nSekvensnummer kan benyttes som offset for feeden. Hendelser knyttet til et tjenestepensjonsnummer starter med sekvensnummer 1 til og med _sisteSekvensnummer_."
+      operationId: HendelserYtelserGet
+      parameters:
+        - name: tpnr
+          in: query
+          description: Id for ordning som vedtaket tilhører
+          required: true
+          schema:
+            type: string
+        - name: side
+          in: query
+          description: Sidenummer for paginert søk.
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: antall
+          in: query
+          description: Antall hendelser per side.
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 10000
+        - name: sekvensnummer
+          in: query
+          description: Start innlesningen fra dette sekvensnummeret
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 1
+        - name: Authorization
+          in: header
+          description: 'Standard Authorization-header som inneholder et Base64-kodet Bearer-token (JWT-aksesstoken) utstedt av Maskinporten (Difi). Verdien må starte med "Bearer ", deretter følger tokenstrengen.'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json;charset=UTF-8:
+              schema:
+                title: Feed
+                type: object
+                properties:
+                  hendelser:
+                    type: array
+                    description: Liste av ytelseshendelser.
+                    items:
+                      $ref: '#/components/schemas/ytelseshendelse'
+                  sisteSekvensnummer:
+                    type: string
+                    description: Siste sekvensnummer fra forrige side
+                    format: long
+                  sisteLesteSekvensnummer:
+                    type: string
+                    description: Det nyeste sekvensnummeret
+                    format: long
+                  nextUrl:
+                    type: string
+                    description: Lenke til neste side
         '401':
           description: Ugyldig access token
           content:
@@ -79,30 +258,10 @@ paths:
       deprecated: false
 components:
   schemas:
-    feed:
-      title: Feed
+    vedtakshendelse:
+      title: Vedtakshendelse
       type: object
-      properties:
-        hendelser:
-          type: array
-          description: Liste av hendelser
-          items:
-            $ref: '#/components/schemas/hendelse'
-        sisteSekvensnummer:
-          type: string
-          description: Siste sekvensnummer fra forrige side
-          format: long
-        sisteLesteSekvensnummer:
-          type: string
-          description: Det nyeste sekvensnummeret
-          format: long
-        nextUrl:
-          type: string
-          description: Lenke til neste side
-    hendelse:
-      title: Hendelse
-      type: object
-      description: En hendelse tilknyttet samordningspliktig ytelse
+      description: En hendelse tilknyttet samordningspliktig vedtak
       properties:
         ytelsesType:
           type: string
@@ -124,6 +283,46 @@ components:
           type: string
           description: Dato til og med.
           format: date
+    ytelseshendelse:
+      title: Ytelsesendelse
+      type: object
+      description: En hendelse tilknyttet tjenstepensjonsytelse.
+      properties:
+        sekvensnummer:
+          type: string
+          description: Sekvensnummer.
+          format: long
+        tpnr:
+          type: string
+          description: Organisasjonsnummeret til tjenestepensjonsordning.
+        identifikator:
+          type: string
+          description: Identifiserer brukeren (eks. fnr/dnr)
+        hendelseType:
+          type: object
+          description: Type hendelse.
+          items:
+            $ref: '#/components/schemas/hendelseTypeCode'
+        ytelseType:
+          type: string
+          description: Ytelsen er av denne typen.
+    hendelseTypeCode:
+      type: string
+      description: Type hendelse for en ytelse.
+      enum:
+        - SLETTING
+        - OPPHOR
+        - OPPRETT
+    datoFom:
+      type: string
+      description: Dato fra og med.
+      format: date
+      nullable: false
+    datoTom:
+      type: string
+      description: Dato til og med.
+      format: date
+      nullable: true
   securitySchemes:
     Maskinporten:
       type: http
