Oppdaterer navn på property hentvedtaksinformasjon

--- a/docs/api/alderspensjon/vedtaksinformasjon/apidocHentVedtaksinformasjon.yaml
+++ b/docs/api/alderspensjon/vedtaksinformasjon/apidocHentVedtaksinformasjon.yaml
@@ -350,7 +350,7 @@ components:
       description: Informasjon om avvik eller spesielle forhold fra regeltjeneste
       type: object
       properties:
-        argumentListeString:
+        argumentListe:
           type: array
           items: {}
         kode:
